# markupsth

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
src/: config.rs  document.rs  format.rs  formatters.rs  formatting.rs  lib.rs  markupsth.rs  syntax.rs  tagpattern.rs
tests/: formatted_html_always_indent.html  formatted_html_auto_indent.html  formatted_xml_auto_indent.xml
