[package]
name = "markupsth"
version = "0.2.1"
authors = ["Michael Eberhardt <github@michael-eberhardt.de>"]
edition = "2021"
description = "Crate to define and print out formatted Markup Languages."
documentation = "https://github.com/neutrinoks/markupsth"
readme = "README.md"
repository = "https://github.com/neutrinoks/markupsth"
license = "MIT OR Apache-2.0"
keywords = ["markup", "language", "html", "xml", "syntax"]
categories = ["text-editors", "web-programming"]
publish = true

[dev-dependencies]
totems = "0.2"
